--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -14,7 +14,7 @@ development:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 
 test:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] || "test-key" %>
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
