--- a/config/database.yml
+++ b/config/database.yml
@@ -18,12 +18,8 @@ default: &default
 
 development:
   <<: *default
-  #database: blog_development
-  #username:
-  #password:
-  #host:
-  #port:
-
+  adapter: sqlite3
+  database: db/development.sqlite3
 test:
   adapter: sqlite3
   database: db/test.sqlite3
